c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/no_arguments/variable_shadows_function.c
int main(void) {
    int foo(void);

    int x = foo();
    if (x > 0) {
        int foo  = 3;
        x = x + foo;
    }
    return x;
}

int foo(void) {
    return 4;
}