c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_types/extra_credit/postfix_incr_fun_name.c
int x(void);

int main(void) {
    x++;
    return 0;
}